Version history
===============

Version 1.0 BETA (29/7/2012)
----------------------------
- First beta release of the module.

Version 1.0 Final (16/1/2013)
-----------------------------
- Initial production release.

Version 1.01 Final (22/1/2013)
------------------------------
- Fix incorrect data type assignment in several preferences ('string' should be 'text').

Version 1.02 Final (20/2/2013)
------------------------------
- Fix start page preference (wasn't working).
- Fix broken hits counter.
- Add 'new' publications as a submenu option.
- Substantially improve efficiency of search function, especially for large result sets
- Fix broken pagination in category view

Version 1.03 Final (1/8/2013)
-----------------------------
- Removed incorrect closing anchor tag on item titles.
- Work around HTML Purifier comment insertion / template issue (Smarty evaluates comments in an otherwise empty field as TRUE)
- Fixed search function bug that was crashing profile views.
- Search now examines the creator, extended_text and publisher fields (in addition to title and description)
- Fixed broken default language preference when adding new publication
- Add user-side edit/delete links (admins only)

Version 1.04
------------
- Change way dohtml / dobr field visibility and default settings are handled (set properties in initCommonVar()
- Fix incorrect display of extended_text rather than description field in summary (index) view.
- Add SEO friendly URL extension to publication.itemUrl field.